# quantum-trader-agent

./: .ai.md  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  daily_check.ps1  daily_check_kis.ps1  docker-compose.live.yml  docker-compose.yml  external-trading-lecture-techniques.md  pyproject.toml  qta.spec  setup.sh
.claude/: settings.json
.claude/commands/: cleanup-issue.md  drop-issue.md  finish-issue.md  hs.md  plan.md  remind-issue.md  start-issue.md
.githooks/: pre-commit
.github/workflows/: .ai.md  build-exe.yml  ci.yml  coverage.yml  graphdb-smoke.yml  kis-paper-nightly.yml  mcp-smoke.yml  metalabeler-retrain.yml  ontology-check.yml  patch-notes-check.yml  (+4 more)
config/: airborne_short_whitelist.yaml
configs/: policy.yaml  walkforward.yaml
docs/: .ai.md
grafana/: .ai.md
infra/: .ai.md
loki/: .ai.md  labels.md
models/: README.md
pine_scripts/: airborne_confluence_scorecard.pine
policies/: .ai.md  aggressive.yaml  conservative.yaml  neutral.yaml
prometheus/: .ai.md  prometheus.yml
reports/: airborne_criteria_combinations_5y.json  airborne_filter_sweep_5y.json  airborne_filter_sweep_r2_5y.json  airborne_hourly_pf_5y.json  airborne_short_5y_gate_tpsl_matrix.json  airborne_short_whitelist_hour_sweep.json  bench_bn1d_live_bb_lower_bounce.json  bench_bn1d_live_breakout_with_atr_stop.json  bench_bn1d_live_breakout_with_atr_stop_v2.json  bench_bn1d_live_oversold_with_divergence.json  bench_bn1d_live_rsi_oversold_volume_spike.json  bench_ensemble_bn1d_5y.json  bench_krx_live_bb_lower_bounce.json  bench_krx_live_breakout_with_atr_stop.json  bench_krx_live_oversold_with_divergence.json  bench_krx_live_rsi_oversold_volume_spike.json  bench_ppp_altvol_beat_eth.json  bench_ppp_altvol_regime.json  bench_ppp_faithful_5y.json  bench_ppp_faithful_confluence.json  bench_ppp_reversion.json  bench_ppp_scalping_5y.json  eval_breakout_atr_v2_1m.json  eval_live_airborne_kst_morning_5y.json  eval_live_scanners_5y.json  eval_multi_alpha_altcoin_v1_5y.json  eval_turtle_trend_daily_5y.json  portfolio_cs_plus_cand_c.json  robustness_bn_1d.json  robustness_krx_1d.json  signal_families_5y.json  sweep_breakout_atr_1y.json  sweep_breakout_atr_5y.json  sweep_candc_scalping_FINAL_REPORT_TEMPLATE.md  sweep_candc_scalping_btc_probe.json  validate_bn_1d.json  validate_bn_1d_v2.json  validate_bn_1d_v3.json  validate_krx_1d.json  validate_krx_1d_v2.json  (+1 more)
samples/: zipline_hello.py
scripts/: .ai.md  _apply_candc_scalping_results.py  _eval_breakout_atr_v2_1m.py  _swing_clean_majors_reanalysis.py  _swing_forming_vs_closed.py  _swing_setup_clean_cache.py  airborne_alert_daemon.py  airborne_short_whitelist_daemon.py  airborne_short_whitelist_hour_sweep.py  airborne_trader_daemon.py  analyze_airborne_criteria_combinations_5y.py  analyze_airborne_hourly_pf_5y.py  analyze_live_scanners_robustness.py  bench_airborne_filter_sweep_5y.py  bench_airborne_filter_sweep_r2_5y.py  bench_airborne_short_gate_tpsl_5y.py  bench_cs_all_strategies.py  bench_cs_tsmom_crypto.py  bench_cs_tsmom_kr.py  bench_cs_universe.py  bench_funding_arbitrage.py  bench_hts_daily_30d.py  bench_iranyi_full_stack.py  bench_iranyi_variants.py  bench_live_airborne_kst_morning_5y.py  bench_live_airborne_quick.py  bench_live_airborne_v11_5m_exit.py  bench_live_airborne_v11_5m_exit_v2.py  bench_live_airborne_v11_bidir.py  bench_live_airborne_v2_quick.py  bench_live_airborne_v3_quick.py  bench_live_mg_quick.py  bench_live_scanner.py  bench_metalabeler_btc.py  bench_metalabeler_kis.py  bench_multi_alpha_altcoin_v1_5y.py  bench_ppp_altvol.py  bench_ppp_scalping_1m_faithful.py  bench_ppp_scalping_5y.py  bench_regime_switching.py  (+79 more)
services/: .ai.md
src/: .ai.md
tests/: .ai.md  conftest.py  test_account_info.py  test_account_info_concurrency.py  test_async_kill_switch.py  test_async_strategy_protocol.py  test_backtest_cost.py  test_binance_protective.py  test_breakout_donchian.py  test_broker_kis_price.py  test_calendar_align.py  test_consensus_kelly.py  test_conversion.py  test_cs_async_wrapper_capital_fraction.py  test_cs_basket_dispatcher.py  test_cvar_levels.py  test_dashboard.py  test_dashboard_airborne_fires.py  test_dashboard_cs_tsmom_signals.py  test_dashboard_history_permanence.py  test_dashboard_ma_cross.py  test_dashboard_manual_close.py  test_dashboard_manual_trade.py  test_dashboard_pnl_integration.py  test_dashboard_shadow_runs.py  test_dashboard_signals_page.py  test_dashboard_strategies.py  test_dashboard_strategy_card.py  test_dashboard_ws_timeline.py  test_data_lake_schema.py  test_doc_agent.py  test_donchian_signal.py  test_exchange_funding.py  test_executor.py  test_fear_greed_proxy.py  test_feed.py  test_fetch_candles.py  test_fetch_kis_daily_ohlcv.py  test_iranyi_entry_router.py  test_iranyi_features.py  (+83 more)
(+1181 files in other folders)
