[project]
name = "quantum-trader-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42,<46",
    "httpx>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "scipy>=1.10",
    "websocket-client>=1.7,<2.0",
    "websockets>=12",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "freezegun",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "respx>=0.21",
    "responses>=0.25",
]
# pandas-ta is a Python <=3.10 only optional cross-check dep used by tests/signals/.
# Tests skip when not installed (pytest.mark.skipif). Install manually if you want
# to run pandas-ta cross-check tests on a Python <=3.10 environment.
ta-crosscheck = [
    "pandas-ta",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: requires network/secrets (default skipped)",
    "slow: long-running benchmarks (default skipped; run with -m slow)",
]
addopts = "-m 'not integration and not slow'"
asyncio_mode = "auto"
